Fix list format

--- a/2018/january/02.md
+++ b/2018/january/02.md
@@ -24,6 +24,6 @@ setSomethingNewWay({ hasDate: true, hasName: true })
 
 ## Links
 
-:movie_camera: [Universal Basic Income](https://www.youtube.com/watch?v=kl39KHS07Xc)
-:page_facing_up: [A Great JavaScript Side Project is your Most Important Asset](https://thefullstack.xyz/javascript-side-project/)
+- :movie_camera: [Universal Basic Income](https://www.youtube.com/watch?v=kl39KHS07Xc)
+- :page_facing_up: [A Great JavaScript Side Project is your Most Important Asset](https://thefullstack.xyz/javascript-side-project/)
 
