--- a/2018/january/01.md
+++ b/2018/january/01.md
@@ -14,5 +14,5 @@ Today I focused on leadership so I spent part of my day reading a book called **
 
 ## Watched
 
-The Flash - S03E07
-The Flash - S03E08
+- The Flash - S03E07
+- The Flash - S03E08
