--- a/2018/january/02.md
+++ b/2018/january/02.md
@@ -22,6 +22,20 @@ setSomethingRegularWay(true, true)
 setSomethingNewWay({ hasDate: true, hasName: true })
 ```
 
+## Reading
+
+The "I" is an illusion as is nations, gods and money
+
+Ensure political rights for the people increases their motivation and initiative which is useful in battlefields and factories
+
+- Humans will lost their economic and military value
+- System will continue to value humans collectively
+- System will continue to value some individual humans beings creating a new superhuman elite
+
+Will the elites and governments continue to value every human being even when he stops generating economic value? 
+
+Computers aren't, in 2016, more conscious than their prototipes from the 1950 decade but humans still are in danger to lose their value because intelligence is decoupling from consciousness
+
 ## Links
 
 - :movie_camera: [Universal Basic Income](https://www.youtube.com/watch?v=kl39KHS07Xc)
