--- a/2018/january/02.md
+++ b/2018/january/02.md
@@ -30,7 +30,7 @@ Ensure political rights for the people increases their motivation and initiative
 
 - Humans will lost their economic and military value
 - System will continue to value humans collectively
-- System will continue to value some individual humans beings creating a new superhuman elite
+- System will continue to value some individual human beings creating a new superhuman elite
 
 Will the elites and governments continue to value every human being even when he stops generating economic value? 
 
