--- a/2018/january/04.md
+++ b/2018/january/04.md
@@ -1,6 +1,6 @@
 # 04/01/2018
 
-Today my rotine at RV started to get back on track, some real work to do, @raphaelfabeni is back from vacation so now our team is almost complete!
+Today my rotine at RV started to get back on track, some real work to do, [@raphaelfabeni](https://www.github.com/raphaelfabeni) is back from vacation with almost 6kg of açai eaten and a lot of stories about great places in Bahia, so now our team is almost complete!
 
 But I still had time to read and to think about some important things about ethic and about our jobs as developers. We are shaping the future. At our side we have scientists helping us taking technology one step further. But our work already started to take others people jobs, some of us are building softwares to replace, well... us. I believe we may feel deeply sorry to be part of this in the future. What we gonna do when more than a half of the planet population turn unemployable? I'm not saying unemployed, I'm saying unemployable, people that will not have any opportunities cause they will not have any jobs available.
 
