--- a/2018/january/04.md
+++ b/2018/january/04.md
@@ -12,7 +12,7 @@ A good way to find the average between two numbers without creating a lot of sid
 
 ```
 const numbers = [25, 34, 48, 56];
-const result = numbers.reduce((total, score) => total + score)
+const result = numbers.reduce((total, number) => total + number)
 console.log(result)
 ```
 
