Fix section title

--- a/2018/january/09.md
+++ b/2018/january/09.md
@@ -29,6 +29,6 @@ fullDate.format(date)
 - :page_facing_up: [How to Fix Facebook—Before It Fixes Us](https://washingtonmonthly.com/magazine/january-february-march-2018/how-to-fix-facebook-before-it-fixes-us/)
 - :movie_camera: [Resposta ao Funk Ostentação - Edu Krieger](https://www.youtube.com/watch?v=4aJwV8cWxDM)
 
-## Next Book to Read
+## Now Reading
 
 - **Reinventing organisations** - by Frederic Laloux
