--- a/2018/january/10.md
+++ b/2018/january/10.md
@@ -10,7 +10,7 @@ Today, after a few years without needing using a "Bootstrap-like" grid system I 
 grid-creator(columns, screen-size = '', gutter = '20px')
   for i in 1..columns
     if (size != '')
-      .col-{size}-{i}
+      .col-{screen-size}-{i}
         lost-column i/columns auto gutter
     else
       .col-{i}
