--- a/2018/january/10.md
+++ b/2018/january/10.md
@@ -7,7 +7,7 @@ The last few days were amazing at Red Ventures. We had a lot of great discussion
 Today, after a few years without needing using a "Bootstrap-like" grid system I spent literally 4 minutes to build a Stylus function to generate a grid system for me with a 'little' help of Lost. I didn't had time to think if this approach has any drawbacks.
 
 ```
-grid-creator(columns, screen-size = '', gutter = '20px')
+grid-creator(columns, screen-size = '', gutter = 20px)
   for i in 1..columns
     if (screen-size != '')
       .col-{screen-size}-{i}
