--- a/2018/january/11.md
+++ b/2018/january/11.md
@@ -4,7 +4,7 @@ Why do people still believes in conspiracy theories? I think it's because this i
 
 ## JS
 
-Do you know there's a really simple way to obtain a DOMStringMap of data attributes on HTML elements? Well, until today I didn't knew this too hahaha 
+Do you know there's a really simple way to obtain a DOMStringMap of data attributes in HTML elements? Well, until today I didn't knew this too hahaha 
 
 ```
 <div id="car" data-name="Ferrari" data-year="2018"></div>
