--- a/2018/january/16.md
+++ b/2018/january/16.md
@@ -1,6 +1,6 @@
 # 16/01/2018
 
-So it's been already five days since my last log! I've been pretty busy on the last few days, a lot of things to do at work, some family stuff and my birthday yesterday basically took all my free time. I'm writing a really nice post on Medium and I planning to ralease it on next weekend!
+So it's been already five days since my last log! I've been pretty busy on the last few days, a lot of things to do at work, some family stuff and my birthday yesterday basically took all my free time. I'm writing a really nice post on Medium and I planning to release it on next weekend!
 
 ---
 
