--- a/2018/january/23.md
+++ b/2018/january/23.md
@@ -12,7 +12,7 @@ These three actions can literally destroy the culture and will of your team. I'm
 
 > When learning to fly (more specifically to land), I was taught to look where the obstacles aren't. You end up where you're looking. If you're looking at the obstacle, you're going to hit it. If you're looking at a long empty field, you're going to have plenty of space to move - [@AndyPalmer](https://www.twitter.com/AndyPalmer)
 
-> You never achieve anyhhing unless you stick with something - Geoffrey the Butler
+> You never achieve anything unless you stick with something - Geoffrey the Butler
 
 ## CSS Houdini
 
