--- a/2018/january/23.md
+++ b/2018/january/23.md
@@ -1,9 +1,9 @@
 # 23/01/2018
 
-I've been reading a lot about business administration lately, mostly about how to deal with some scenarios like when a team has to deal with technical or business debits. Sometimes it may seens resonable to win time by writing some bad code but, one day, you will have to pay the price with a big and cruel interest. The same rule applies to business debits. While it's pretty simple to understand how you get a technical debit, a business debit is a more complicated scenario, but I believe there's three main reasons: 
+I've been reading a lot about business administration lately, mostly about how to deal with some scenarios like when a team has to deal with technical or business debits. Sometimes it may seens resonable to win time by writing some bad code but, one day, you will have to pay the price with a big and cruel interest rate. The same rule applies to business debits. While it's pretty simple to understand how you get a technical debit, a business debit is a more complicated scenario, but I believe there's three main reasons: 
 
 - You put two employees to perform the same function
-- You offer a unreal sallary to a important employee when he gets a offer from another company
+- You offer a unreal salary to a important employee when he gets a offer from another company
 - You give up performance management and feedback process to employees
 
 These three actions can literally destroy the culture and will of your team. I'm thinking about writing a post about it as soon as I have some free time. 
