--- a/2018/may/09.md
+++ b/2018/may/09.md
@@ -28,7 +28,7 @@ The Distracted Mind: Ancient Brains in a High-Tech World - Adam Gazzaley e Larry
 
 - [Dimmu Borgir - Eonian](https://open.spotify.com/album/0GYTO5zMXZe1mJSnkh5ORt?si=hq0DiRtGTPal3IdmxAYyYg)
 
-## Links:
+## Links
 
 - :eyes: [VueJS Docs](https://vuejs.org/)
 - :o: [IQ360 Chatbot - Made With Vue](https://dsv.iq360.com.br/investimentos/ferramentas/assistente-virtual/#/)
